--- a/.github/workflows/wxpush-on-time.yml
+++ b/.github/workflows/wxpush-on-time.yml
@@ -1,13 +1,13 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: wxpush-on-time
 
 on:
   workflow_dispatch:
   schedule:
-    # 每天国际时间 02:10 运行, 即北京时间 10:10 运行
-    - cron: '0 14 * * *'
+    # 每天国际时间 23:30 运行, 即北京时间 7:30 运行
+    - cron: '45 2 * * *'
 
 jobs:
   build:
